--- a/SquidLyricMaker/Views/MainWindow.axaml
+++ b/SquidLyricMaker/Views/MainWindow.axaml
@@ -44,7 +44,7 @@
 		</DockPanel>
 
 
-		<TabControl SelectedIndex="1">
+		<TabControl SelectedIndex="2">
 			<TabItem Header="Write">
 				<ScrollViewer>
 					<WrapPanel Orientation="Horizontal">
@@ -159,6 +159,41 @@
 					
 					<TextBlock Text="To start synchronizing, import an audio file using the File menu." IsVisible="{Binding !IsReady}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 				</DockPanel>
+			</TabItem>
+			<TabItem Header="Export">
+				<ScrollViewer>
+					<StackPanel>
+						<WrapPanel>
+							<StackPanel>
+								<TextBlock Text="Format" FontWeight="Bold" FontSize="16"/>
+								<RadioButton GroupName="FormatGroup" Content="Plain LRC"/>
+								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Most compatible"/>
+								<RadioButton GroupName="FormatGroup" Content="Enhanced LRC (word by word highlighting)"/>
+								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Requires a special reader"/>
+								<CheckBox Content="With Translations"/>
+								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Displays only in FRESHMusicPlayer 12 or later, readable (without translations) by most LRC readers"/>
+							</StackPanel>
+
+							<StackPanel>
+								<TextBlock Text="LRC Options" FontWeight="Bold" FontSize="16"/>
+								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Enabling these might improve compatibility with certain readers"/>
+								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Don't enable them if you aren't having problems"/>
+								<CheckBox Content="Don't include metadata headers"/>
+								<CheckBox Content="Use 2 digits of precision"/>
+							</StackPanel>
+
+							<StackPanel>
+								<TextBlock Text="Preview" FontWeight="Bold" FontSize="16"/>
+								<Border CornerRadius="5" Background="{DynamicResource ForegroundColor}" Padding="10">
+									<TextBlock Text="Preview goes here"/>
+								</Border>
+							</StackPanel>
+
+						</WrapPanel>
+						<Button Content="Export!" Margin="0,10,0,0"/>
+					</StackPanel>
+					
+				</ScrollViewer>
 			</TabItem>
 		</TabControl>
 	</DockPanel>
