--- a/SquidLyricMaker/Views/MainWindow.axaml
+++ b/SquidLyricMaker/Views/MainWindow.axaml
@@ -166,11 +166,11 @@
 						<WrapPanel>
 							<StackPanel>
 								<TextBlock Text="Format" FontWeight="Bold" FontSize="16"/>
-								<RadioButton GroupName="FormatGroup" Content="Plain LRC"/>
+								<RadioButton GroupName="FormatGroup" Content="Plain LRC" IsChecked="{Binding ExportPlainLRC}"/>
 								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Most compatible"/>
-								<RadioButton GroupName="FormatGroup" Content="Enhanced LRC (word by word highlighting)"/>
+								<RadioButton GroupName="FormatGroup" Content="Enhanced LRC (word by word highlighting)" IsChecked="{Binding ExportEnhancedLRC}"/>
 								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Requires a special reader"/>
-								<CheckBox Content="With Translations"/>
+								<CheckBox Content="With Translations" IsChecked="{Binding ExportWithTranslations}"/>
 								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Displays only in FRESHMusicPlayer 12 or later, readable (without translations) by most LRC readers"/>
 							</StackPanel>
 
@@ -178,19 +178,19 @@
 								<TextBlock Text="LRC Options" FontWeight="Bold" FontSize="16"/>
 								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Enabling these might improve compatibility with certain readers"/>
 								<TextBlock FontSize="10" Foreground="{DynamicResource SecondaryTextColor}" Text="Don't enable them if you aren't having problems"/>
-								<CheckBox Content="Don't include metadata headers"/>
-								<CheckBox Content="Use 2 digits of precision"/>
+								<CheckBox Content="Don't include metadata headers" IsChecked="{Binding ExportWithoutMetadata}"/>
+								<CheckBox Content="Use 2 digits of precision" IsChecked="{Binding ExportWithTwoDigitPrecision}"/>
 							</StackPanel>
 
 							<StackPanel>
 								<TextBlock Text="Preview" FontWeight="Bold" FontSize="16"/>
 								<Border CornerRadius="5" Background="{DynamicResource ForegroundColor}" Padding="10">
-									<TextBlock Text="Preview goes here"/>
+									<TextBlock Text="{Binding LrcFilePreview}"/>
 								</Border>
 							</StackPanel>
 
 						</WrapPanel>
-						<Button Content="Export!" Margin="0,10,0,0"/>
+						<Button Content="Export!" Command="{Binding ExportCommand}" Margin="0,10,0,0"/>
 					</StackPanel>
 					
 				</ScrollViewer>
