Rename to FRESHLyricMaker

--- a/FRESHLyricMaker/Views/AboutDialog.axaml
+++ b/FRESHLyricMaker/Views/AboutDialog.axaml
@@ -1,11 +1,11 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:vm="using:SquidLyricMaker.ViewModels"
+		xmlns:vm="using:FRESHLyricMaker.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" Width="400" Height="400"
-        x:Class="SquidLyricMaker.Views.AboutDialog" SizeToContent="Height"
-        Title="About SquidLyricMaker">
+        x:Class="FRESHLyricMaker.Views.AboutDialog" SizeToContent="Height"
+        Title="About FRESHLyricMaker">
     <Window.DataContext>
 		<vm:AboutDialogViewModel/>
 	</Window.DataContext>
@@ -16,7 +16,7 @@
 		</Border>
 
 		<Grid ColumnDefinitions="Auto, 1*" RowDefinitions="Auto, Auto, Auto, Auto">
-			<TextBlock Grid.Column="0" Grid.Row="0" Text="SquidLyricMaker" Foreground="{DynamicResource SecondaryTextColor}"/>
+			<TextBlock Grid.Column="0" Grid.Row="0" Text="FRESHLyricMaker" Foreground="{DynamicResource SecondaryTextColor}"/>
 			<TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding AppVersion}" Margin="15,0,0,5"/>
 			
 			<TextBlock Grid.Column="0" Grid.Row="1" Text="Release Stream" Foreground="{DynamicResource SecondaryTextColor}"/>
@@ -29,13 +29,13 @@
 			<TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding FrameworkVersion}" Margin="15,0,0,5"/>
 		</Grid>
 		
-		<Button Content="SquidLyricMaker on the interwebs" Command="{Binding OpenProjectWebsite}"/>
+		<Button Content="FRESHLyricMaker on the interwebs" Command="{Binding OpenProjectWebsite}"/>
 		<Button Content="Report an issue" Command="{Binding ReportIssue}"/>
 		<Button Content="View source code" Command="{Binding OpenSourceCode}"/>
 		
 		<TextBlock Foreground="{DynamicResource SecondaryTextColor}" Text="Copyright © 2022 Squidhouse Software (and open source contributors)" TextWrapping="Wrap" FontSize="10"/>
 		<TextBlock Foreground="{DynamicResource SecondaryTextColor}" Text="Licensed under the MIT license" TextWrapping="Wrap" FontSize="10"/>
 
-		<TextBlock Text="Thank you for using SquidLyricMaker ❤" TextWrapping="Wrap" HorizontalAlignment="Center"/>
+		<TextBlock Text="Thank you for using FRESHLyricMaker ❤" TextWrapping="Wrap" HorizontalAlignment="Center"/>
 	</StackPanel>
 </Window>
