--- a/FRESHLyricMaker/Views/MainWindow.axaml
+++ b/FRESHLyricMaker/Views/MainWindow.axaml
@@ -1,12 +1,12 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:SquidLyricMaker.ViewModels"
+        xmlns:vm="using:FRESHLyricMaker.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="SquidLyricMaker.Views.MainWindow"
+        x:Class="FRESHLyricMaker.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="SquidLyricMaker">
+        Title="FRESHLyricMaker">
 
     <Design.DataContext>
         <vm:MainWindowViewModel/>
@@ -46,7 +46,7 @@
 			<NativeMenuItem Header="Help">
 				<NativeMenu>
 					<NativeMenuItem Header="Help..." Command="{Binding ShowHelpDialogCommand}" Gesture="F1"/>
-					<NativeMenuItem Header="About SquidLyricMaker..." Command="{Binding ShowAboutDialogCommand}"/>
+					<NativeMenuItem Header="About FRESHLyricMaker..." Command="{Binding ShowAboutDialogCommand}"/>
 				</NativeMenu>
 			</NativeMenuItem>
 		</NativeMenu>
