--- a/FRESHLyricMaker/App.axaml
+++ b/FRESHLyricMaker/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:SquidLyricMaker"
-             x:Class="SquidLyricMaker.App">
+             xmlns:local="using:FRESHLyricMaker"
+             x:Class="FRESHLyricMaker.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
